@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130416"
-#define public MagickPackageReleaseDate "snapshot-20130416"
+#define public MagickPackageVersionAddendum ".020130420"
+#define public MagickPackageReleaseDate "snapshot-20130420"
